# cmd/api/controllers/establishment/establishments.go
@@ -1,9 +1,12 @@
 package establishment
 
 import (
-	"github.com/gofiber/fiber/v2"
-	"appGestion/pkg/models/establishment"
 	resp "appGestion/pkg/models"
+	"appGestion/pkg/models/establishment"
+
+	"vendor/golang.org/x/net/idna"
+
+	"github.com/gofiber/fiber/v2"
 )
 
 //  Establishment Establishment create
@@ -61,5 +64,50 @@ func (ctrl *Controller) Create(c *fiber.Ctx) error {
 		Status:  true,
 		Body:    id,
 		Message: "Token obtenido con éxito",
+	})
+}
+
+func (ctrl *Controller) Get(c *fiber.Ctx) error {
+	id := c.Params("id")
+
+	
+}
+
+//  Establishment Establishments Get
+//	@Summary		Establishments get
+//	@Description	Establishments get
+//	@Tags			EstablishmentAdmin
+//	@Accept			json
+//	@Produce		json
+//	@Security		BearerAuth
+//	@Success		200	{object}	resp.Response
+//	@Failure		400	{object}	resp.Response
+//	@Failure		401	{object}	resp.Response
+//	@Failure		404	{object}	resp.Response
+//	@Failure		422	{object}	resp.Response
+//	@Failure		500	{object}	resp.Response
+//	@Router			/establishments/get_all_admin [get]
+func (ctrl *Controller) GetAllAdmin(c *fiber.Ctx) error {
+	establishments, err := ctrl.EstablishmentService.GetAllAdmin()
+
+	if err != nil {
+		if errResp, ok := err.(*resp.ErrorStruc); ok {
+			return c.Status(errResp.StatusCode).JSON(resp.Response{
+				Status:  false,
+				Body:    nil,
+				Message: errResp.Message,
+			})
+		}
+		return c.Status(fiber.StatusInternalServerError).JSON(resp.Response{
+			Status:  false,
+			Body:    nil,
+			Message: "Error interno",
+		})
+	}
+
+	return c.Status(fiber.StatusOK).JSON(resp.Response{
+		Status:  true,
+		Body:    establishments,
+		Message: "Establecimientos obtenidos con éxito",
 	})
 }
